style(About): used pl instead of ml for the section. Increased border-r and paddings for the btn. Corrected font size clamp for the section's titles. Wrapped the page number and section title in div to set the correct leading. Set ring offset-bg

--- a/src/index.css
+++ b/src/index.css
@@ -125,12 +125,8 @@
     1rem
   ); /* xs → base font size for projects' short descriptions */
 
-  --font-section-label: clamp(
-    1.875rem,
-    0.8824rem + 4.4118vw,
-    3rem
-  ); /* 3xl → 5xl font size for sections' labels (titles), e.g., About, Projects, Contacts */
-
+  --font-section-label: clamp(1.5rem, 0.1765rem + 5.8824vw, 3rem);
+  /* 3xl → 5xl font size for sections' labels (titles), e.g., About, Projects, Contacts */
   --font-page-number: clamp(
     1.25rem,
     0.9868rem + 1.1696vw,
